--- a/Popularity Preference Voting/settings.gradle
+++ b/Popularity Preference Voting/settings.gradle
@@ -12,6 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Diary"
-include ':app'
+rootProject.name = "Popularity Preference Voting"
 include ':app'
